[package]
name = "ever-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
argh = "0.1.7"
hex = "0.4.3"
libc = "0.2"
thiserror = "1.0.30"

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
